--- a/index.html
+++ b/index.html
@@ -1,14 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rock Paper Scissors</title>
+	<title>Rock Paper Scissors Game</title>
+	<script src="./js/script.js"></script>
 </head>
 <body>
-    
-    <script src="./js/script.js">
-    </script>
 </body>
 </html>
