add eventlistener to each button     It calls playRound function with correct playerSelection (rock, paper or scissors) for each button

--- a/index.html
+++ b/index.html
@@ -2,8 +2,15 @@
 <html>
 <head>
 	<title>Rock Paper Scissors Game</title>
-	<script src="./js/script.js"></script>
 </head>
 <body>
+    <button class="rock">Rock</button>
+    <button class="paper">Paper</button>
+    <button class="scissors">Scissors</button>
+
+    <div class="result-box">
+
+    </div>
+    <script src="./js/script copy.js"></script>
 </body>
 </html>
