add dom elements

--- a/index.html
+++ b/index.html
@@ -2,12 +2,16 @@
 <html>
 <head>
 	<title>Rock Paper Scissors Game</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <button class="rock">Rock</button>
-    <button class="paper">Paper</button>
-    <button class="scissors">Scissors</button>
 
+    <div class="buttons">
+        <button role="button" class="rock">Rock</button>
+        <button role="button" class="paper">Paper</button>
+        <button role="button" class="scissors">Scissors</button>
+    </div>
+    
     <div class="result-box">
 
     </div>
