add UI and the reset game button

--- a/index.html
+++ b/index.html
@@ -5,16 +5,18 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-
+    <header>
+        <h1>Let's Play Rock Paper Scissors</h1>
+    </header>
     <div class="buttons">
-        <button role="button" class="rock">Rock</button>
-        <button role="button" class="paper">Paper</button>
-        <button role="button" class="scissors">Scissors</button>
+        <button role="button" class="rock btn">Rock</button>
+        <button role="button" class="paper btn">Paper</button>
+        <button role="button" class="scissors btn">Scissors</button>
     </div>
     
     <div class="result-box">
 
     </div>
-    <script src="./js/script copy.js"></script>
+    <script src="./js/script.js"></script>
 </body>
 </html>
